--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   name             : "Dayeeeeeee"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "hey oㅁo"
-  location         : "Somewhere"
+  location         : "Somewhere:ghost:"
   email            :
   links:
     - label: "Email"
