--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "Hello!!! Nice to meet U!!"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Dayeeeeeee"
+name                     : "Dayeeeeeee:ghost:"
 description              : "hey oㅁo"
 url                      : "https://dayeeeeeee.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
